--- a/index.html
+++ b/index.html
@@ -1,17 +1,18 @@
+
 <!DOCTYPE html>
-<html lang="en" dir="ltr">
+<html lang="en">
   <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.14.0/css/all.min.css" integrity="sha512-1PKOgIY59xJ8Co8+NE6FZ+LOAZKjy+KY8iq0G4B3CyeY6wYHN3yt9PW0XpSriVlkMXe40PTKnXrLnZ9+fkDaog==" crossorigin="anonymous">
-    <link rel="stylesheet" href="style.css">
-    <title>Hidden Search Widget</title>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.14.0/css/all.min.css" integrity="sha512-1PKOgIY59xJ8Co8+NE6FZ+LOAZKjy+KY8iq0G4B3CyeY6wYHN3yt9PW0XpSriVlkMXe40PTKnXrLnZ9+fkDaog==" crossorigin="anonymous" />
+    <link rel="stylesheet" href="style.css" />
+    <title>Hidden Search</title>
   </head>
   <body>
     <div class="search">
       <input type="text" class="input" placeholder="Search...">
       <button class="btn">
-        <img src="https://th.bing.com/th/id/R.22cd73114c08d91d5d245e67a16341c4?rik=VSN6AliZPaUlSA&riu=http%3a%2f%2fwww.clker.com%2fcliparts%2f8%2fn%2fU%2fM%2fV%2fE%2fsearch-icon-th.png&ehk=9%2fIliyCtRk3pq%2f6N2335OgDDUrqW69X6ttqA9VG2cu8%3d&risl=&pid=ImgRaw&r=0" alt="search image">
+        <i class="fas fa-search"></i>
       </button>
     </div>
     <script src="script.js"></script>
